# prometheus

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  ReadMe.adoc
.github/workflows/: main.yml
cmake_utils/: 3rd_party_library.cmake  check_cpu_features.cmake  check_cpu_features_icelake.cpp  compile_flag_and_definition.cmake  compiler_and_platform.cmake  cpm_install.cmake  cpu_features.cmake  install_target.cmake  instruction_set.hpp  module_source.cmake  utility.cmake
include/prometheus/: macro.hpp
scripts/: common.cmake  cpu_feature.cmake  cpu_feature_icelake.cpp  detect_supported_instruction.cpp  external_installer.cmake  library.cmake  platform_and_compiler.cmake
scripts/maybe_useful/: module_source.cmake  module_workaround.cmake
src/: prometheus.ixx
src/chars/: ascii.ixx  category.ixx  chars.hpp  chars.ixx  converter.ixx  cp_1252.ixx  def.hpp  encoding.hpp  encoding.ixx  icelake.common.hpp  icelake.cpp  icelake.hpp  icelake.ixx  icelake.latin.hpp  icelake.utf16.hpp  icelake.utf8.hpp  icelake_ascii.hpp  icelake_ascii.ixx  icelake_utf16.hpp  icelake_utf16.ixx  icelake_utf32.hpp  icelake_utf32.ixx  icelake_utf8.hpp  icelake_utf8.ixx  latin.scalar.hpp  scalar.common.hpp  scalar.cpp  scalar.hpp  scalar.ixx  scalar.latin.hpp  scalar.utf16.hpp  scalar.utf32.hpp  scalar.utf8.hpp  scalar_1.cpp  scalar_1.hpp  scalar_ascii.hpp  scalar_ascii.ixx  scalar_utf16.hpp  scalar_utf16.ixx  scalar_utf32.hpp  (+6 more)
src/command_line_parser/: command_line_parser.hpp  command_line_parser.ixx  error.hpp  option.hpp  parser.hpp  regex.hpp
src/concurrency/: concurrency.hpp  concurrency.ixx  queue.hpp  queue.ixx  thread.cpp  thread.hpp  thread.impl.ixx  thread.ixx  unfair_mutex.hpp  unfair_mutex.impl.ixx  unfair_mutex.ixx
src/container/: container.ixx  plane.ixx  string_pool.ixx
src/coroutine/: coroutine.hpp  coroutine.ixx  generator.hpp  generator.ixx  task.hpp  task.ixx
src/debug/: exception.cpp
src/draw/: animation.ixx  context.cpp  context.hpp  context.impl.ixx  context.ixx  def.hpp  def.impl.ixx  def.ixx  draw.hpp  draw.ixx  draw_list.cpp  draw_list.draw_flag.ixx  draw_list.flag.ixx  draw_list.hpp  draw_list.impl.ixx  draw_list.ixx  draw_list.shared_data.ixx  dynamic_node.impl.ixx  dynamic_node.ixx  element.border.ixx  element.impl.ixx  element.ixx  element.layout.ixx  element.separator.ixx  element.text.ixx  flag.hpp  font.cpp  font.hpp  font.impl.ixx  font.ixx  mouse.cpp  mouse.hpp  node.impl.ixx  node.ixx  shared_data.cpp  shared_data.hpp  style.ixx  surface.ixx  theme.cpp  theme.hpp  (+7 more)
src/error/: command_line.impl.ixx  command_line.ixx  debug.hpp  debug.impl.ixx  debug.ixx  debug.win.ixx  debug_win.hpp  error.hpp  error.ixx  exception.hpp  exception.ixx  instruction_set.impl.ixx  instruction_set.ixx  platform.hpp  platform.impl.ixx  platform.ixx  platform.win.ixx
src/functional/: aligned_union.hpp  aligned_union.ixx  enumeration.hpp  flag.ixx  function_ref.hpp  function_ref.ixx  function_signature.ixx  functional.hpp  functional.ixx  functor.hpp  functor.ixx  hash.hpp  hash.ixx  math.hpp  math.ixx  template_parameter_list.hpp  type_list.hpp  type_list.ixx  value_list.hpp  value_list.ixx
src/gui/: draw_list.ixx  font.impl.ixx  font.ixx  gui.ixx
src/i18n/: i18n.hpp  i18n.ixx  ietf_language_tag.ixx  iso_15924.ixx  iso_3166.ixx  iso_639.ixx  range.cpp  range.hpp
src/infrastructure/: aligned_union.ixx  cast.ixx  charconv.ixx  command_line_parser.ixx  compiler.ixx  concepts.ixx  enum_meta.ixx  error.ixx  error_debug.ixx  error_exception.ixx  error_impl_win.ixx  error_platform.ixx  function_ref.ixx  functor.ixx  infrastructure.hpp  infrastructure.ixx  memory.ixx  plane.ixx  runtime_error.ixx  runtime_error_error_code.ixx  runtime_error_exception.ixx  runtime_error_impl_win.ixx  runtime_error_terminate_message.ixx  state_machine.hpp  state_machine.ixx  string.ixx  string_pool.ixx  type_traits.ixx  unit_test.hpp  unit_test.ixx  wildcard_match.ixx
src/io/: device.ixx  io.ixx
src/math/: cmath.hpp  math.hpp
src/memory/: memory.hpp  memory.ixx  read_write.hpp  read_write.ixx  rw.hpp
src/meta/: dimension.cache.inl  dimension.hpp  enum_name.hpp  enumeration.hpp  enumeration.ixx  member.hpp  member.ixx  member.visit.inl  member_name.hpp  meta.hpp  meta.ixx  name.hpp  name.ixx  string.hpp  string.ixx  to_string.hpp  (+2 more)
unit_test/: CMakeLists.txt
unit_test/src/: gui_main.cpp  main.cpp
unit_test/src/chars/: ascii.cpp  cp_1252.cpp  gen.hpp  icelake.cpp  latin.icelake.cpp  latin.scalar.cpp  scalar.cpp  utf16.cpp  utf16.icelake.cpp  utf16.scalar.cpp  utf32.cpp  utf32.scalar.cpp  utf8.char.scalar.cpp  utf8.cpp  utf8.scalar.cpp  utf_16.cpp  utf_8.cpp
unit_test/src/concurrency/: queue.cpp
unit_test/src/container/: plane.cpp
unit_test/src/coroutine/: generator.cpp  task.cpp
unit_test/src/draw/: CMakeLists.txt  backend_dx11.cpp  backend_dx12.cpp  def.hpp  glfw_callback_handler.cpp  main_dx11.cpp  main_dx12.cpp
unit_test/src/draw/common/: glfw_callback_handler.cpp  print_time.hpp
unit_test/src/draw/dx11/: CMakeLists.txt  backend.cpp  main.cpp
unit_test/src/draw/dx12/: CMakeLists.txt  backend.cpp  main.cpp
unit_test/src/draw/win/: def.hpp
unit_test/src/functional/: aligned_union.cpp  function_ref.cpp
unit_test/src/gui/: backend_dx11.cpp  backend_dx12.cpp  def.hpp  dx_error_handler.hpp  font.hpp  main_dx11.cpp  main_dx12.cpp  main_vulkan.cpp
unit_test/src/i18n/: ietf_language_tag.cpp  iso_15924.cpp  iso_3166.cpp  iso_639.cpp
unit_test/src/infrastructure/: aligned_union.cpp  cast.cpp  enum_meta.cpp  function_ref.cpp  plane.cpp  string.cpp  utility.cpp  wildcard_match.cpp
unit_test/src/infrastructure/cast/: object.cpp
unit_test/src/infrastructure/reflection/: enum.cpp
unit_test/src/infrastructure/string/: wildcard_match.cpp
unit_test/src/meta/: dimension.cpp  enumeration.cpp  member.cpp
unit_test/src/string/: meta_string.cpp  string_pool.cpp  wildcard_match.cpp
unit_test/src/type/cast/: enum.cpp  object.cpp
unit_test/src/utility/: aligned_union.cpp  cast.cpp  enum_meta.cpp  function_ref.cpp
unit_test/src/wildcard/: wildcard.cpp
(+122 files in other folders)
